--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>art.redoc</groupId>
-            <artifactId>code-generation</artifactId>
+            <artifactId>code-generator</artifactId>
             <version>0.1.0</version>
         </dependency>
         <!-- starter -->
