--- a/flash-sale-id-generator/pom.xml
+++ b/flash-sale-id-generator/pom.xml
@@ -6,7 +6,6 @@
         <artifactId>flash-sale</artifactId>
         <groupId>art.redoc</groupId>
         <version>0.1.0</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -24,6 +23,17 @@
             <groupId>art.redoc</groupId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
