--- a/flash-sale-id-generator/src/main/resources/application.yml
+++ b/flash-sale-id-generator/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8999
+  port: 10700
 
 eureka:
   client:
@@ -8,4 +8,4 @@ eureka:
 
 spring:
   application:
-    name: idgenerator-service
+    name: id-generator-service
