--- a/flash-sale-web/src/main/resources/application.yml
+++ b/flash-sale-web/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 80
 
+logging:
+  level:
+    root: info
+
 eureka:
   client:
     serviceUrl:
@@ -31,7 +35,23 @@ spring:
     max-activ: 300
     maximum-pool-size: 350
   jpa:
-    show-sql: true
+    show-sql: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate.ddl-auto: update
-    hibernate.show-sql: true
+    hibernate.show-sql: false
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
+    timeout: 5000
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
+
+  kafka:
+    producer:
+      bootstrap-servers: 127.0.0.1:9092
